--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel=icon href="/logo.svg" sizes="16x16" type="image/png">
+<link rel=icon href="/logo.svg" sizes="32x32 48x48" type="image/vnd.microsoft.icon">
+<link rel=icon href="/logo.svg" sizes="128x128 512x512 8192x8192 32768x32768">
+<link rel=icon href="/logo.svg" sizes="57x57" type="image/png">
+<link rel=icon href="/logo.svg" sizes="any" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
